fix bug căn giua hero -wrap

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -54,6 +54,7 @@ a {
   position: relative;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   background: #e6f0ff;
   height: calc(100vh - 90px);
 }
@@ -90,21 +91,19 @@ a {
   border-radius: 8px;
 }
 /* hero */
-.hero {
-  margin-top: 130px;
-}
+
 /* tỷ lệ 559/1110 *100 */
-.hero .info {
+.hero-wrap .info {
   width: 51%;
 }
-.hero .sub-title {
+.hero-wrap .sub-title {
   font-size: 1.8rem;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.01em;
   color: #687690;
 }
-.hero .title {
+.hero-wrap .title {
   margin-top: 8px;
   font-size: 6.4rem;
   font-weight: 700;
@@ -112,7 +111,7 @@ a {
   /* 118.75% */
   color: #000336;
 }
-.hero .desc {
+.hero-wrap .desc {
   margin-top: 30px;
   font-size: 1.8rem;
   font-weight: 400;
